examples/test/testpolicy110.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy110
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key26: value6
      key10: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value1
          key18: value49
          key0: value29
      podSelector:
        matchLabels:
          key2: value18
          key1: value41
